test and solve some bugs

--- a/OLANCER_APP/templates/login.html
+++ b/OLANCER_APP/templates/login.html
@@ -9,9 +9,9 @@
                         <div class="box">
                             <h2 class="title_signup">{{input_list[0]}}</h2>
                             <label for="email" class="label_signup">{{input_list[1]}}</label>
-                            <input id="email" type="email" name="username" placeholder="{{input_list[1]}}" class="input_signup">
+                            <input id="email" type="email" name="username" placeholder="{{input_list[1]}}" class="input_signup" required="required">
                             <label for="password" class="label_signup">{{input_list[2]}}</label>
-                            <input id="password" type="password" name="password" placeholder="{{input_list[2]}}" class="input_signup">
+                            <input id="password" type="password" name="password" placeholder="{{input_list[2]}}" class="input_signup" required="required">
                         </div>
                     </div>
                     <input type="submit" name="submit" class="input_signup_submit" value="{{input_list[3]}}">
