--- a/OLANCER_APP/templates/signup.html
+++ b/OLANCER_APP/templates/signup.html
@@ -9,13 +9,13 @@
                         <div class="box">
                             <h2 class="title_signup">{{input_list[0]}}</h2>
                             <label for="username" class="label_signup">{{input_list[1]}}</label>
-                            <input id="username"  name="username" type="text" placeholder="{{input_list[1]}}" class="input_signup">
+                            <input id="username"  name="username" type="text" placeholder="{{input_list[1]}}" class="input_signup" required="required">
                             <label for="email" class="label_signup">{{input_list[2]}}</label>
-                            <input id="email" placeholder="{{input_list[2]}}" name="email" type="email" class="input_signup">
+                            <input id="email" placeholder="{{input_list[2]}}" name="email" type="email" class="input_signup" required="required">
                             <label for="password" class="label_signup">{{input_list[3]}}</label>
-                            <input id="password" name="password" placeholder="{{input_list[3]}}" type="password" class="input_signup">
+                            <input id="password" name="password" placeholder="{{input_list[3]}}" type="password" class="input_signup" required="required">
                             <label for="re_password" class="label_signup">{{input_list[4]}}</label>
-                            <input id="re_password" type="password" name="re_password"  placeholder="{{input_list[4]}}" class="input_signup">
+                            <input id="re_password" type="password" name="re_password"  placeholder="{{input_list[4]}}" class="input_signup" required="required">
                         </div>
                         <div class="box">
 
