--- a/OLANCER_APP/templates/wallet.html
+++ b/OLANCER_APP/templates/wallet.html
@@ -15,9 +15,9 @@
                         <div class="box">
                             <h2 class="title_signup">{{title}}</h2>
                             <label for="wallet_address" class="label_signup">{{rec_addr}}</label>
-                            <input id="wallet_address"  name="wallet_address" type="text" placeholder="{{enter_addr}}" class="input_signup">
+                            <input id="wallet_address"  name="wallet_address" type="text" placeholder="{{enter_addr}}" class="input_signup" required="required">
                             <label for="credit" class="label_signup">{{amount}}</label>
-                            <input id="credit"  name="credit" type="number" placeholder="{{enter_amount}}" class="input_signup">
+                            <input id="credit"  name="credit" type="number" placeholder="{{enter_amount}}" class="input_signup" required="required">
                         </div>
                     </div>
                     <input type="submit" name="submit" class="input_signup_submit" value="{{submit}}">
